CMF 1.5.7-beta (unreleased)

  Bug Fixes

    - The line-endings problem fixed for file-based PythonScripts applies to
      multi-line python code in file-based PageTemplates as well. The same
      fix (universal line-endings support) is now used here too.
      (http://www.zope.org/Collectors/CMF/403)

CMF 1.5.6 (2006/02/26)
  
  Bug Fixes

    - In certain circumstances file-based PythonScripts with foreign line
      endings were not handled correctly. PythonScripts are now read using
      Python's universal line-endings support.
      (http://www.zope.org/Collectors/CMF/403)
      
CMF 1.5.6-beta (2006/02/19)

  Bug Fixes

    - CMFDefault.DiscussionTool: Ensure that isDiscussionAllowedFor will
      not accidentally acquire discussion settings from the content 
      object's parent.
      (http://www.zope.org/Collectors/CMF/398)

    - CMFDefault.RegistrationTool: Adding single quotes to the allowed
      characters in the local part of an email address.
      (http://www.zope.org/Collectors/CMF/401)

    - CMFCore.FSPythonScript: FSPythonScripts forgot to add __file__ to
      the script globals. This broke warnings.warn() when a stacklevel
      argument pointing into the script was passed (2).

    - CMFSetup.workflow: Workflows managing no permissions at all could
      make the CMFSetup workflow exporter fail.
      (http://www.zope.org/Collectors/CMF/397)

    - CMFDefault.DiscussionItem: Deleting a discussion reply would not
      recurse and left items below the deleted reply still cataloged
      (http://www.zope.org/Collectors/CMF/391)

    - Corrected the HelpSystem documentation for DCWorkflow Guards
      (http://www.zope.org/Collectors/CMF/394)

    - CMFCore utils: Synced _checkPermission with Zope 2.8.5 code.
      checkPermission of Zope 2.8.5 and later contains bug fixes and respects
      proxy roles, but for backwards compatibility CMF 1.5 still needs its own
      implementation.

  Others
